[gd_scene load_steps=59 format=3 uid="uid://c18ejp3xww7bx"]

[ext_resource type="Script" path="res://characters/enemies/jaqueira/jaqueira.gd" id="1_67487"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="2_u1hfq"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector_reactive.gd" id="3_mdkti"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence.gd" id="4_gbgu8"]
[ext_resource type="Script" path="res://addons/beehave/nodes/leaves/blackboard_compare.gd" id="5_3d4mh"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="6_lpqde"]
[ext_resource type="Script" path="res://characters/actions/set_enemy_target.gd" id="6_pji80"]
[ext_resource type="Script" path="res://characters/actions/jump_back.gd" id="7_1xwg6"]
[ext_resource type="Script" path="res://characters/conditions/area2d_colliding.gd" id="7_dg0j1"]
[ext_resource type="Script" path="res://characters/actions/attack.gd" id="8_2r52h"]
[ext_resource type="Script" path="res://characters/actions/wait_signal.gd" id="8_sa6p7"]
[ext_resource type="Script" path="res://addons/beehave/nodes/leaves/blackboard_set.gd" id="9_0n0j0"]
[ext_resource type="Script" path="res://characters/actions/move_to_target.gd" id="10_2sr1b"]
[ext_resource type="Script" path="res://addons/beehave/blackboard.gd" id="11_0akia"]
[ext_resource type="Texture2D" uid="uid://bvqrt8kff4p07" path="res://characters/enemies/jaqueira/sprites/jaqueira_fallen-Sheet.png" id="11_y3ay8"]
[ext_resource type="Texture2D" uid="uid://ca6y2cfuvp44r" path="res://characters/enemies/jaqueira/sprites/jaqueira_throwing-Sheet.png" id="12_2iaxn"]
[ext_resource type="Texture2D" uid="uid://7ku42islkopj" path="res://characters/enemies/jaqueira/sprites/jaqueira_gettup-Sheet.png" id="12_e2xsq"]
[ext_resource type="Script" path="res://characters/conditions/random.gd" id="12_k4i34"]
[ext_resource type="Texture2D" uid="uid://d0gv7818xobed" path="res://characters/enemies/jaqueira/sprites/jaqueira_idle-Sheet.png" id="12_n34hd"]
[ext_resource type="Script" path="res://characters/actions/wait_secs.gd" id="13_e6tla"]
[ext_resource type="Script" path="res://addons/beehave/nodes/decorators/cooldown.gd" id="13_og5t1"]
[ext_resource type="Texture2D" uid="uid://crptp077qpeia" path="res://characters/enemies/jaqueira/sprites/jaqueira_dano-Sheet.png" id="13_qft4s"]
[ext_resource type="Script" path="res://characters/actions/success.gd" id="14_ef681"]
[ext_resource type="Texture2D" uid="uid://dvb8nox1lx0h6" path="res://characters/enemies/jaqueira/sprites/jaqueira_walk-Sheet.png" id="14_xxd5q"]
[ext_resource type="PackedScene" uid="uid://c6gb10qkoj7bx" path="res://characters/components/damage.tscn" id="15_h52di"]
[ext_resource type="Script" path="res://addons/beehave/nodes/decorators/time_limiter.gd" id="15_nmqvk"]
[ext_resource type="Script" path="res://characters/actions/running.gd" id="17_dtng6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45cbs"]
size = Vector2(20, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldkrt"]
size = Vector2(50, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q03q"]
atlas = ExtResource("11_y3ay8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eruxy"]
atlas = ExtResource("12_e2xsq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou4d5"]
atlas = ExtResource("12_n34hd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh8sm"]
atlas = ExtResource("12_n34hd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3y3w"]
atlas = ExtResource("12_n34hd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_laxdp"]
atlas = ExtResource("12_n34hd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dq38"]
atlas = ExtResource("12_n34hd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6xkj"]
atlas = ExtResource("12_n34hd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oimd0"]
atlas = ExtResource("13_qft4s")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3w6s"]
atlas = ExtResource("12_2iaxn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eidqf"]
atlas = ExtResource("12_2iaxn")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k48na"]
atlas = ExtResource("12_2iaxn")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfrja"]
atlas = ExtResource("12_2iaxn")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctldu"]
atlas = ExtResource("12_2iaxn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yc21"]
atlas = ExtResource("12_2iaxn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kirt"]
atlas = ExtResource("12_2iaxn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkcab"]
atlas = ExtResource("12_2iaxn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bekkf"]
atlas = ExtResource("14_xxd5q")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3283j"]
atlas = ExtResource("14_xxd5q")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgl7x"]
atlas = ExtResource("14_xxd5q")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8mgt"]
atlas = ExtResource("14_xxd5q")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bobd6"]
atlas = ExtResource("14_xxd5q")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1crmh"]
atlas = ExtResource("14_xxd5q")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfj0d"]
atlas = ExtResource("14_xxd5q")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luhhb"]
atlas = ExtResource("14_xxd5q")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iheqe"]
atlas = ExtResource("14_xxd5q")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b38de"]
atlas = ExtResource("14_xxd5q")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q4m0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q03q")
}],
"loop": true,
"name": &"fall_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eruxy")
}],
"loop": true,
"name": &"get_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou4d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh8sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3y3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laxdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dq38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6xkj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oimd0")
}],
"loop": true,
"name": &"knockback",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3w6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eidqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k48na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfrja")
}],
"loop": false,
"name": &"reload",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctldu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yc21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kirt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkcab")
}],
"loop": false,
"name": &"throw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bekkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3283j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgl7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8mgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bobd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1crmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfj0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luhhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iheqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b38de")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ho6pt"]
size = Vector2(17, 14)

[node name="Jaqueira" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_67487")

[node name="BeehaveTree" type="Node" parent="." node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("2_u1hfq")
blackboard = NodePath("../Blackboard")
actor = NodePath("..")

[node name="SelectorReactiveComposite" type="Node" parent="BeehaveTree"]
script = ExtResource("3_mdkti")

[node name="Damage" type="Node" parent="BeehaveTree/SelectorReactiveComposite"]
script = ExtResource("4_gbgu8")

[node name="CheckDamageTrue" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage"]
script = ExtResource("5_3d4mh")
left_operand = "get_value(\"damage\")"
right_operand = "true"

[node name="WaitCooldown" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage"]
script = ExtResource("6_lpqde")

[node name="FallDownAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown"]
script = ExtResource("4_gbgu8")

[node name="CheckFallDownTrue" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown/FallDownAction"]
script = ExtResource("5_3d4mh")
left_operand = "get_value(\"fall_down\")"
right_operand = "true"

[node name="JumpBackAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown/FallDownAction"]
script = ExtResource("7_1xwg6")
impulse = Vector2(300, -200)
animation_name = "knockback"

[node name="WaitGetUp" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown/FallDownAction" node_paths=PackedStringArray("node")]
script = ExtResource("8_sa6p7")
node = NodePath("../../../../../../Turnable/Damage")
signal_to_wait = &"get_up"

[node name="SetFallDownToFalse" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown/FallDownAction"]
script = ExtResource("9_0n0j0")
key = "\"fall_down\""
value = "false"

[node name="WaitCooldownEnd" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage/WaitCooldown" node_paths=PackedStringArray("node")]
script = ExtResource("8_sa6p7")
node = NodePath("../../../../../Turnable/Damage")
signal_to_wait = &"cooldown_end"

[node name="SetDamageToFalse" type="Node" parent="BeehaveTree/SelectorReactiveComposite/Damage"]
script = ExtResource("9_0n0j0")
key = "\"damage\""
value = "false"

[node name="ReachPlayer" type="Node" parent="BeehaveTree/SelectorReactiveComposite"]
script = ExtResource("4_gbgu8")

[node name="SetEnemyTargetAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer"]
script = ExtResource("6_pji80")

[node name="ReachPlayerCondition" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer" node_paths=PackedStringArray("area")]
script = ExtResource("7_dg0j1")
area = NodePath("../../../../Turnable/PlayerReach")
group = &"players"

[node name="Attack" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer"]
script = ExtResource("4_gbgu8")

[node name="WaitSecsAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/Attack"]
script = ExtResource("13_e6tla")
time = ".2"

[node name="CooldownDecorator" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/Attack"]
script = ExtResource("13_og5t1")
wait_time = 0.1

[node name="SequenceComposite" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/Attack/CooldownDecorator"]
script = ExtResource("4_gbgu8")

[node name="SuccessAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/Attack/CooldownDecorator/SequenceComposite"]
script = ExtResource("14_ef681")

[node name="AttackAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/ReachPlayer/Attack/CooldownDecorator/SequenceComposite"]
script = ExtResource("8_2r52h")

[node name="TimeLimiterDecorator" type="Node" parent="BeehaveTree/SelectorReactiveComposite"]
script = ExtResource("15_nmqvk")
wait_time = 1.0

[node name="Act" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator"]
script = ExtResource("6_lpqde")

[node name="MoveToPlayer" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator/Act"]
script = ExtResource("4_gbgu8")

[node name="RandomConditon" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator/Act/MoveToPlayer"]
script = ExtResource("12_k4i34")
success_chance = 0.7

[node name="MoveToTargetAction" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator/Act/MoveToPlayer"]
script = ExtResource("10_2sr1b")

[node name="RunningACtion" type="Node" parent="BeehaveTree/SelectorReactiveComposite/TimeLimiterDecorator/Act"]
script = ExtResource("17_dtng6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 22.5)
shape = SubResource("RectangleShape2D_45cbs")

[node name="Blackboard" type="Node" parent="."]
script = ExtResource("11_0akia")

[node name="Turnable" type="Node2D" parent="."]

[node name="PlayerReach" type="Area2D" parent="Turnable"]
position = Vector2(185, 0)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turnable/PlayerReach"]
shape = SubResource("RectangleShape2D_ldkrt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Turnable"]
texture_filter = 1
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_q4m0v")
animation = &"idle"
autoplay = "idle"
speed_scale = 2.0

[node name="JacaMarker" type="Marker2D" parent="Turnable"]
position = Vector2(19, -15)

[node name="Damage" parent="Turnable" groups=["enemies"] instance=ExtResource("15_h52di")]
scale = Vector2(1.58901, 1.64752)
collision_layer = 4
collision_mask = 2
damage_group = &"players"
health = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turnable/Damage"]
position = Vector2(-1.5, -4)
shape = SubResource("RectangleShape2D_ho6pt")

[connection signal="animation_finished" from="Turnable/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="cooldown_end" from="Turnable/Damage" to="." method="_on_damage_cooldown_end"]
[connection signal="damage_taken" from="Turnable/Damage" to="." method="_on_damage_damage_taken"]
[connection signal="fall_down" from="Turnable/Damage" to="." method="_on_damage_fall_down"]
[connection signal="get_up" from="Turnable/Damage" to="." method="_on_damage_get_up"]
[connection signal="killed" from="Turnable/Damage" to="." method="_on_damage_killed"]
[connection signal="start_get_up" from="Turnable/Damage" to="." method="_on_damage_start_get_up"]
